# global-mobility-test

./: README.md  docker-compose.yml
.github/workflows/: audit.yaml
api-gateway/: Dockerfile
docs/: Docs.md  index.md
docs/MongoDB/: install.md
docs/ecommerce/: install.md  usage.md
docs/postman_collection/: Global Moblity Apex Technical Test.postman_collection.json
docs/spaceAPI/: install.md  usage.md
ecommerce/: Dockerfile  go.mod  go.sum
ecommerce/cmd/: main.go
ecommerce/internal/config/: database.go
ecommerce/internal/handlers/: product_handler.go
ecommerce/internal/models/: product.go
ecommerce/internal/repositories/: product_repository.go
ecommerce/internal/routes/: product_routes.go
ecommerce/internal/services/: product_service.go
ecommerce/internal/utils/: errors.go  uuid_generator.go
ecommerce/test/handlers/: product_handler_test.go
ecommerce/test/repositories/: product_repository_test.go
ecommerce/test/services/: product_service_test.go
mongoDB/: Dockerfile  init.sh  mongod.conf  schema.json
spaceAPI/: Dockerfile  pyproject.toml
spaceAPI/spaceapi/: main.py
spaceAPI/spaceapi/config/: nasa_connection.py
spaceAPI/spaceapi/routes/: apod.py
spaceAPI/spaceapi/services/: nasa_service.py
spaceAPI/spaceapi/templates/: apod.html
spaceAPI/spaceapi/utils/: exceptions.py
